--- a/bildung.html
+++ b/bildung.html
@@ -38,9 +38,8 @@
     <section class="about-me">
         <div class="row">
             <div class="about-col">
-                <h1>I am simply great</h1>
-                <p>Never done before. Amazing. Breathtaking. Out of this world. Me.</p>
-                <a href="" class="hero-btn purple-btn">EXPLORE</a>
+                <h1>Work in Process...</h1>
+                <a href="" class="hero-btn purple-btn">I do nothing </a>
             </div>
             <div class="about-col">
                 <img src="images/workspace6_high_res.jpg">
