--- a/about.html
+++ b/about.html
@@ -59,7 +59,6 @@
 
 <section class="personal">
     <h1>Interessen</h1>
-    <p>Technik war schon immer präsent in meinem Leben.</p>
     <div class="row">
         <div class="personal-col">
             <img src="images/color_pencils2_hires.jpg">
@@ -86,7 +85,7 @@
 
 <section class="skills">
     <h1>Fähigkeiten</h1>
-    <p>Loro Piana, Messika, Chaumet, Tom Ford, Escada, Byron Gogol and Hazel Green.</p>
+    <p>Meine Person in wenigen Worten ist:</p>
     
     <div class="row">
         <div class="skills-col">
